Text Formatter/tests/error/badparam3.tx
\textwidth{-1}Tries to make text width negative
